fix(content/playlist): fix entries list filters alignment in IE11

--- a/src/shared/content-shared/entries/entries-list/entries-list.component.scss
+++ b/src/shared/content-shared/entries/entries-list/entries-list.component.scss
@@ -161,6 +161,7 @@
     .kFilters {
       display: flex;
       margin-left: auto;
+      justify-content: flex-end;
     }
   }
 
